--- a/content/posts/leetcode/1.md
+++ b/content/posts/leetcode/1.md
@@ -55,6 +55,8 @@ You can return the answer in any order.
 + 若我們將已迭代過的值存入 HashMap，接下來我們就只需要找 HashMap 中是否有值與當下的值 nums[i] 相加為 target。因為只迭代一遍，故時間複雜度為 \\(O(n)\\)。
 ### 三、解題
 #### 1. HashMap
++ Time complexity: \\(O(n)\\)
++ Space complexity: \\(O(n)\\)
 ```C++
 vector<int> twoSum(vector<int>& nums, int target) {
     unordered_map<int,int> map;         // {值, 索引}
