--- a/content/posts/leetcode/2.md
+++ b/content/posts/leetcode/2.md
@@ -55,6 +55,8 @@ You may assume the two numbers do not contain any leading zero, except the numbe
 + 時間複雜度為 \\(O(n)\\)，若可利用原本的鏈表，空間複雜度可降為 \\(O(1)\\)。
 ### 三、解題
 #### 1. Recursion
++ Time complexity: \\(O(n)\\)
++ Space complexity: \\(O(1)\\)
 ```C++
 ListNode* addTwoNumbers(ListNode* l1, ListNode* l2) {
     return add(l1, l2, 0);
@@ -73,6 +75,8 @@ ListNode* add(ListNode* l1, ListNode* l2, int cin){     // 將 cin 設為 carry 
 }
 ```
 #### 2. Iteration
++ Time complexity: \\(O(n)\\)
++ Space complexity: \\(O(1)\\)
 ![dummy](https://th.bing.com/th/id/R.c3cc1e558060afead1703c31d497b6f7?rik=ZEtkgc8D13Dw2Q&riu=http%3a%2f%2fi.imgur.com%2fG5Xz9eS.png&ehk=244d8t75jWGzvbKgGyWiM9HAU1HyvFKtTCMHUvFo1Vs%3d&risl=&pid=ImgRaw&r=0)
 ```C++
 ListNode* addTwoNumbers(ListNode* l1, ListNode* l2) {
