--- a/content/posts/leetcode/3.md
+++ b/content/posts/leetcode/3.md
@@ -55,6 +55,8 @@ Given a string `s`, find the length of the **longest substring** without repeati
     + 空間複雜度為 \\(O(k)\\)，k 為字元的個數，最多為 128 個(題目限制字元為 letters, digits, symbols and spaces)，故\\(O(k)=O(128)=O(1)\\)
 ### 三、解題
 #### 1. Sliding Window
++ Time complexity: \\(O(n)\\)
++ Space complexity: \\(O(1)\\)
 ```C++
 int lengthOfLongestSubstring(string s) {
     int cnt[128] = {0};
