--- a/content/posts/leetcode/347.md
+++ b/content/posts/leetcode/347.md
@@ -44,7 +44,7 @@ Given an integer array `nums` and an integer `k`, return the `k` *most frequent 
 **Follow up:** Your algorithm's time complexity must be better than `O(n log n)`, where n is the array's size.  
 
 ### 二、分析
-+ 先以 HashMap 統計每個數字出現的頻率後，再以出現的頻率做排序。
++ 先以 HashMap 統計每個數字出現的頻率後，再以出現的頻率做排序。Bucket sort 或是 max heap。
 + priority_queue 的宣告方式。
     1. `greater<>` 與 `less<>`
     ```C++
@@ -62,7 +62,9 @@ Given an integer array `nums` and an integer `k`, return the `k` *most frequent 
     ```
 
 ### 三、解題
-#### Priority Queue
+#### 1. Priority Queue
++ Time complexity: \\(O(n\log k)\\)
++ Space complexity: \\(O(n)\\)
 ```C++
 vector<int> topKFrequent(vector<int>& nums, int k) {
     unordered_map<int,int> freq;
@@ -79,4 +81,29 @@ vector<int> topKFrequent(vector<int>& nums, int k) {
     return res;
 }
 ```
+#### 2. Bucket Sort
++ Time complexity: \\(O(n)\\)
++ Space complexity: \\(O(1)\\)
+
 [回目錄 Catalog](/posts/leetcode)
+```C++
+vector<int> topKFrequent(vector<int>& nums, int k) {
+    unordered_map<int,int> freq;
+    for (const int& num : nums)     // 統計每個數字出現的次數
+        freq[num]++;
+    vector<vector<int>> bucket;
+    for (const auto f : freq) {
+        while (bucket.size() <= f.second) {     // 將數字，依不同頻率次數放到相對應的 vector 中
+            bucket.push_back({});
+        }
+        bucket[f.second].push_back(f.first);
+    }
+    vector<int> res;
+    for (int i = bucket.size()-1; i >= 0; i--) {
+        for (int j = 0; j < bucket[i].size() && k; j++, k--) {      // 拿頻率前 k 多的元素
+            res.push_back(bucket[i][j]);
+        }
+    }
+    return res;
+}
+```
