--- a/content/posts/leetcode/5.md
+++ b/content/posts/leetcode/5.md
@@ -53,6 +53,8 @@ A string is called a palindrome string if the reverse of that string is the same
         即 `s.substr(left+1, len-2)` 為 palindromic。
 ### 三、解題
 #### 1. Dynamic Prograimming
++ Time complexity: \\(O(n^2)\\)
++ Space complexity: \\(O(n^2)\\)
 ```C++
 string longestPalindrome(string s) {
     int n = s.length();
