--- a/content/posts/leetcode/7.md
+++ b/content/posts/leetcode/7.md
@@ -20,7 +20,7 @@ ShowBreadCrumbs: true
 ShowPostNavLinks: true
 ShowCodeCopyButtons: true
 ---
-**6. Zigzag Conversion**
+**7. Reverse Integer**
 + Hardness: \\(\color{orange}\textsf{Medium}\\)
 + Ralated Topics: `Math`
 ---
