--- a/content/posts/leetcode/8.md
+++ b/content/posts/leetcode/8.md
@@ -130,7 +130,7 @@ Since 4193 is in the range `[-2^31, 2^31 - 1]`, the final result is 4193.
     ```
 
 ### 三、解題
-#### 1. Math
+#### 1. String
 + Time complexity: \\(O(n)\\)
 + Space complexity: \\(O(1)\\)
 ```C++
