--- a/content/posts/leetcode/10.md
+++ b/content/posts/leetcode/10.md
@@ -99,6 +99,8 @@ bool dfs(int i, int j) {
 }
 ```
 #### 2. DFS + DP(Top Bottom)
++ Time complexity: \\(O(m\times n)，\text{m }為\text{ s }的長度，\text{n }為\text{ p }的長度\\)，
++ Space complexity: \\(O(m\times n)\\)
 ```C++
 int m, n;
 string s, p;
