--- a/content/posts/leetcode/11.md
+++ b/content/posts/leetcode/11.md
@@ -2,7 +2,7 @@
 title: "[Leetcode] 11. Container With Most Water"
 date: 2022-10-26T19:36:06+08:00
 tags: ["Leetcode"]
-draft: true
+draft: false
 Categories: Leetcode
 author: "Rain Hu"
 showToc: true
@@ -21,43 +21,65 @@ ShowPostNavLinks: true
 ShowCodeCopyButtons: true
 ---
 **11. Container With Most Water**
-+ Hardness: \\(\color{green}\textsf{Easy}\\)
-+ Ralated Topics: `Math`
++ Hardness: \\(\color{orange}\textsf{Medium}\\)
++ Ralated Topics: `Array`、`Two Pointer`、`Greedy`
 ---
 ### 一、題目
-Given an integer `x`, return `true` if `x` is palindrome number.  
-An integer is a **palindrome** when it reads the same backward as forward.  
-+ For example, `121` is a palindrome while `123` is not.
+You are given an integer array `height` of length `n`. There are `n` vertical lines drawn such that the two endpoints of the `ith` line are `(i, 0)` and `(i, height[i])`.  
+Find two lines that together with the x-axis form a container, such that the container contains the most water.  
+Return *the maximum amount of water a container can store*.  
+**Notive** that you may not slant the container.
 
 **Example 1:**  
-+ **Input:** x = 121
-+ **Output:** true
-+ **Explanation**: 121 reads as 121 from left to right and from right to left.  
+![question_11](https://s3-lc-upload.s3.amazonaws.com/uploads/2018/07/17/question_11.jpg)  
++ **Input:** height = [1,8,6,2,5,4,8,3,7]
++ **Output:** 49
++ **Explanation**: The above vertical lines are represented by array [1,8,6,2,5,4,8,3,7]. In this case, the max area of water (blue section) the container can contain is 49.  
 
 **Example 2:**
-+ **Input:** x = -121
-+ **Output:** false
-+ **Explanation**: From left to right, it reads -121. From right to left, it becomes 121-. Therefore it is not a palindrome.  
-
-**Example 3:**  
-+ **Input:** x = 10
-+ **Output:** false 
-+ **Explanation:** Reads 01 from right to left. Therefore it is not a palindrome.    
-
++ **Input:** height = [1,1]
++ **Output:** 1
 
 **Constraints:**
-+ `-2^31 <= x <= 2^31-1`
++ `n == height.length`
++ `2 <= n <= 10^5`
++ `0 <= height[i] <= 10^4`
 
-**Follow up:** Could you solve it without converting the integer to a string?
 ---
 
 ### 二、分析
++ 此題用 `Greedy` 與 `Two Pointer` 的方向來思考。
+    + 兩個垂直線**相距愈遠**且**線高愈高**，則兩線間可裝的水愈多。
+    + 兩垂直線間可裝的水，受限於**線高較低**者。
+    + 任兩線間(相距變小)，有任一解大於當下解，只有在有線高高於**兩線線高較低**者。
+    + 故我們每次移動**線高較低**的那邊。
++ 兩線間可裝的水為：
+    ```C++
+    int calArea(vector<int>& height, int left, int right) {
+        return min(height[left], height[right]) * (right - left);
+    }
+    ```
 
 ### 三、解題
-#### 1. Math
-+ Time complexity: \\(O(1)\\)
-+ Space complexity: \\(O(1)\\)
+#### 1. Two Pointer
++ Time complexity: \\(O(n)\\)
++ Space complexity: \\(O(n)\\)
 ```C++
+int calArea(vector<int>& height, int left, int right) {
+    return min(height[left], height[right]) * (right - left);
+}
+int maxArea(vector<int>& height) {
+    int left = 0, right = height.size()-1;
+    int res = 0;
+    do {
+        res = max(res, calArea(height, left, right));
+        if (height[left] < height[right])
+            left++;
+        else 
+            right--;
+    } while (left < right);
+    return res;
 
+}
 ```
 [回目錄 Catalog](/posts/leetcode)
