--- a/content/posts/leetcode/12.md
+++ b/content/posts/leetcode/12.md
@@ -2,7 +2,7 @@
 title: "[Leetcode] 12. Integer to Roman"
 date: 2022-10-26T20:36:08+08:00
 tags: ["Leetcode"]
-draft: true
+draft: false
 Categories: Leetcode
 author: "Rain Hu"
 showToc: true
