--- a/content/posts/leetcode/12.md
+++ b/content/posts/leetcode/12.md
@@ -21,43 +21,63 @@ ShowPostNavLinks: true
 ShowCodeCopyButtons: true
 ---
 **12. Integer to Roman**
-+ Hardness: \\(\color{green}\textsf{Easy}\\)
-+ Ralated Topics: `Math`
++ Hardness: \\(\color{orange}\textsf{Medium}\\)
++ Ralated Topics: `Hash Table`、`Math`、`String`
 ---
 ### 一、題目
-Given an integer `x`, return `true` if `x` is palindrome number.  
-An integer is a **palindrome** when it reads the same backward as forward.  
-+ For example, `121` is a palindrome while `123` is not.
+Roman numerals are represented by seven different symbols: `I`, `V`, `X`, `L`, `C`, `D`, and `M`.  
+\\(\boxed{\begin{array}{ll}
+\textbf{Symbol}&\textbf{Value}\\\\
+\texttt{I}&1\\\\
+\texttt{V}&5\\\\
+\texttt{X}&10\\\\
+\texttt{L}&50\\\\
+\texttt{C}&100\\\\
+\texttt{D}&500\\\\
+\texttt{M}&1000\\\\
+\end{array}}\\)  
+For example, `2` is written as `II` in Roman numeral, just two one's added together. `12` is written as `XII`, which is simply `X + II`. The number `27` is written as `XXVII`, which is `XX + V + II`.  
+Roman numerals are usually written largest to smallest from left to right. However, the numeral for four is not `IIII`. Instead the number four is written as `IV`. Because the one is before the five we subtract it making four. The same principle applies to the number nine, which is written as `IX`. There are six instances where subtraction is used:
++ `I` can be placed before `V` (5) and `X` (10) to make 4 and 9.  
++ `X` can be placed before `L` (50) and `C` (100) to make 40 and 90.  
++ `C` can be placed before `D` (500) and `M` (1000) to make 400 and 900.  
+Given an integer, convert it to a roman numeral.  
 
 **Example 1:**  
-+ **Input:** x = 121
-+ **Output:** true
-+ **Explanation**: 121 reads as 121 from left to right and from right to left.  
++ **Input:** num = 3
++ **Output:** "III"
++ **Explanation**: 3 is represented as 3 ones.
 
 **Example 2:**
-+ **Input:** x = -121
-+ **Output:** false
-+ **Explanation**: From left to right, it reads -121. From right to left, it becomes 121-. Therefore it is not a palindrome.  
++ **Input:** num = 58
++ **Output:** "LVIII"
++ **Explanation**: L = 50, V = 5, III = 3.
 
 **Example 3:**  
-+ **Input:** x = 10
-+ **Output:** false 
-+ **Explanation:** Reads 01 from right to left. Therefore it is not a palindrome.    
++ **Input:** num = 1994  
++ **Output:** "MCMXCIV" 
++ **Explanation:** M = 1000, CM = 900, XC = 90 and IV = 4.
 
 
 **Constraints:**
-+ `-2^31 <= x <= 2^31-1`
++ `1 <= num <= 3999`
 
-**Follow up:** Could you solve it without converting the integer to a string?
 ---
 
 ### 二、分析
++ 既然 `num` 的範圍不大，我們可以利用其轉換的規律，直接用 `Array` 去定義。
 
 ### 三、解題
 #### 1. Math
 + Time complexity: \\(O(1)\\)
 + Space complexity: \\(O(1)\\)
 ```C++
-
+string intToRoman(int num) {
+    string M[] = {"", "M", "MM", "MMM"};
+    string C[] = {"", "C", "CC", "CCC", "CD", "D", "DC", "DCC", "DCCC", "CM"};
+    string X[] = {"", "X", "XX", "XXX", "XL", "L", "LX", "LXX", "LXXX", "XC"};
+    string I[] = {"", "I", "II", "III", "IV", "V", "VI", "VII", "VIII", "IX"};
+    return M[num/1000] + C[(num%1000)/100] + X[(num%100)/10] + I[num%10];
+}
 ```
 [回目錄 Catalog](/posts/leetcode)
