--- a/content/posts/leetcode/17.md
+++ b/content/posts/leetcode/17.md
@@ -70,8 +70,8 @@ A mapping of digits to letters (just like on the telephone buttons) is given bel
 
 ### 三、解題
 #### 1. Backtracking
-+ Time complexity: \\(O()\\)
-+ Space complexity: \\(O()\\)
++ Time complexity: \\(O(m\times n)，\text{m }為\text{ digits }的長度，\text{n }為\text{ dict[i] }的長度\\)，  
++ Space complexity: \\(O(m\times n)\\)
 ```C++
 vector<string> letterCombinations(string digits) {
     vector<string> dict = {"", "", "abc", "def", "ghi", "jkl", "mno", "pqrs", "tuv", "wxyz"};   // 選項
