--- a/content/posts/leetcode/15.md
+++ b/content/posts/leetcode/15.md
@@ -122,4 +122,5 @@ vector<vector<int>> threeSum(vector<int>& nums) {
     return res;
 }
 ```
+[參考文章: [LeetCode] 18. 4Sum](/posts/leetcode/18)  
 [回目錄 Catalog](/posts/leetcode)
