--- a/content/posts/leetcode/18.md
+++ b/content/posts/leetcode/18.md
@@ -48,6 +48,76 @@ You may return the answer in **any order**.
 
 ### 二、分析
 + 延續之前的 [2Sum](/posts/leetcode/1) 跟 [3Sum](/posts/leetcode/15)，大於 3 以上的 `kSum` 問題其實都是依樣畫葫蘆，其時間複雜度為 \\(O(k-1)\\)。
++ 先試改寫 `2Sum`，先前為了達到最優解，採用的是 HashMap 的策略，但對於 `k>2` 時，因時間複雜度為 \\(O(n^{k-1})\\)，採用 `Sorting` 的時間複雜度為 \\(O(n\log n)\\)。故以下會採用 `Two Pointer` 搭配 `sorting` 的策略去解題，
++ 首先我們可以假設數組是已排序的，並參考 `3Sum` 去改寫 `2Sum`，並回傳滿足條件數字組合(注意與原題目不同)，且數組不重覆且為數列不為遞減：
+    ```C++
+    vector<vector<int>> twoSum(vector<int>& nums, int target, int start) {     // nums 為 sorted array
+        vector<vector<int>> res;
+        int left = start;       // 注意 left pointer 是從 nums[i] 的下一位開始，即 i+1，我們將之訂為 start
+        int right = nums.size()-1;
+        while (left < right) {
+            int sum = nums[left] + nums[right];
+            if (sum < target) {
+                while (left+1 < right && nums[left] == nums[left+1]) left++;        // 優化，跳過重覆的值
+                left++;
+            } else if (sum > target) {
+                while (right-1 > left && nums[right-1] == nums[right]) right--;     // 優化，跳過重覆的值
+                right--;
+            } else {
+                res.push_back({nums[left], nums[right]});
+                while (left+1 < right && nums[left] == nums[left+1]) left++;        // 避免重覆數組
+                while (right-1 > left && nums[right-1] == nums[right]) right--;     // 避免重覆數組
+                left++;
+                right--;
+            }
+        }
+        return res;
+    }
+    ```
+    + 接下來要求 `3Sum` 就很簡單了，我們只需要做下列兩件事：
+        1. `sort`
+        2. 代入 `target` 與 `start`，其中 `target` 便是
+        ```C++
+        for (int i = 0; i < nums.size()-k+1; i++) { // 注意上限為 n-k+1
+            target = -nums[i];      // 注意為負
+        }
+        ```
+        + 統整為下，[[LeetCode]15. 3Sum](/posts/leetcode/15)：
+        ```C++
+        vector<vector<int>> threeSum(vector<int>& nums) {
+            sort(nums.begin(), nums.end())  // 注意需先 sort
+            vector<vector<in>> res;
+            for (int i = 0; i < nums.size()-2; i++) {
+                int target = -nums[i];
+                vector<vector<int>> subsets = twoSum(nums, target, i+1);
+                for (vector<int>& subset : subsets) {
+                    res.push_back({nums[i]});
+                    res.back().push_back(subset[0]);
+                    res.back().push_back(subset[1]);
+                }
+                while (i+1 < nums.size()-2 && nums[i] == nums[i+1]) i++;
+            }
+            return res;
+        }
+        ```
++ 接下來我們試著用上面 `3Sum` 改寫成最簡單版的 `kSum`：
+    ```C++
+    // 假設 nums 已為 sorted array，並配合題目限制將 target 改為 long long
+    vector<vector<int>> kSum(vector<int>& nums, long long target, int start, int k) {
+        vector<vector<int>> res;
+        if (nums.size() < k) return res;    // 若數組本身小於 k，則無解
+        if (k == 2) return twoSum(nums, target, start);
+        for (int i = start; i < nums.size()-k+1; i++) {
+            vector<vector<int>> subsets = kSum(nums, target-nums[i], i+1, k-1);
+            for (vector<int>& subset : subsets) {
+                res.push_back({nums[i]});   // 加入 nums[i]
+                res.back().insert(end(res.back()), begin(subset), end(subset));   // 加入符合以 -nums[i] 為 target 的 (k-1)Sum
+            }
+            while (i+1 < nums.size()-k+1 && nums[i] == nums[i+1]) i++;      // 避免重覆數組解
+        }
+        return res;
+    }
+    ```
 
 ### 三、解題
 #### 1. KSum
@@ -55,60 +125,54 @@ You may return the answer in **any order**.
 + Space complexity: \\(O(1)\\)
 ```C++
 vector<vector<int>> fourSum(vector<int>& nums, int target) {
-    sort(begin(nums), end(nums));
+    sort(begin(nums), end(nums));       // 注意需先做排序
     return kSum(nums, target, 0, 4);
 }
 
 vector<vector<int>> kSum(vector<int>& nums, long long target, int start, int k) {
     vector<vector<int>> res;
+    if (nums.size() < k) return res;    // 若數組的大小小於 k 則無解
 
-    // If we have run out of numbers to add, return res.
-    if (start == nums.size()) {
-        return res;
-    }
+    // #優化1: 數組已無剩餘數字可用
+    if (start == nums.size()) return res;
+    // #優化2: 數組的最小值的 k 倍需大於 target，數組的最大值的 k 倍需小於 target，但用乘法會超出 int 範圍，故用除法
+    if (target/k < nums[start]|| target/4 > nums.back()) return res;
 
-    // There are k remaining values to add to the sum. The 
-    // average of these values is at least target / k.
-    long long average_value = target / k;
+    if (k == 2) return twoSum(nums, target, start);
 
-    // We cannot obtain a sum of target if the smallest value
-    // in nums is greater than target / k or if the largest 
-    // value in nums is smaller than target / k.
-    if  (nums[start] > average_value || average_value > nums.back()) {
-        return res;
-    }
-
-    if (k == 2) {
-        return twoSum(nums, target, start);
-    }
-
-    for (int i = start; i < nums.size(); ++i) {
-        if (i == start || nums[i - 1] != nums[i]) {
-            for (vector<int>& subset : kSum(nums, static_cast<long long>(target) - nums[i], i + 1, k - 1)) {
-                res.push_back({nums[i]});
-                res.back().insert(end(res.back()), begin(subset), end(subset));
-            }
+    for (int i = start; i < nums.size()-k+1; i++) {
+        vector<vector<int>> subsets = kSum(nums, target-nums[i], i+1, k-1);
+        for (vector<int>& subset : subsets) {
+            res.push_back({nums[i]});   // 加入 nums[i]
+            res.back().insert(end(res.back()), begin(subset), end(subset));   // 加入符合以 -nums[i] 為 target 的 (k-1)Sum
         }
+        while (i+1 < nums.size()-k+1 && nums[i] == nums[i+1]) i++;      // 避免重覆數組解
     }
+
 
     return res;
 }
 
-vector<vector<int>> twoSum(vector<int>& nums, long long target, int start) {
+vector<vector<int>> twoSum(vector<int>& nums, int target, int start) {     // nums 為 sorted array
     vector<vector<int>> res;
-    int lo = start, hi = int(nums.size()) - 1;
-
-    while (lo < hi) {
-        int curr_sum = nums[lo] + nums[hi];
-        if (curr_sum < target || (lo > start && nums[lo] == nums[lo - 1])) {
-            ++lo;
-        } else if (curr_sum > target || (hi < nums.size() - 1 && nums[hi] == nums[hi + 1])) {
-            --hi;
+    int left = start;       // 注意 left pointer 是從 nums[i] 的下一位開始，即 i+1，我們將之訂為 start
+    int right = nums.size()-1;
+    while (left < right) {
+        int sum = nums[left] + nums[right];
+        if (sum < target) {
+            while (left+1 < right && nums[left] == nums[left+1]) left++;        // 優化，跳過重覆的值
+            left++;
+        } else if (sum > target) {
+            while (right-1 > left && nums[right-1] == nums[right]) right--;     // 優化，跳過重覆的值
+            right--;
         } else {
-            res.push_back({ nums[lo++], nums[hi--] });
+            res.push_back({nums[left], nums[right]});
+            while (left+1 < right && nums[left] == nums[left+1]) left++;        // 避免重覆數組
+            while (right-1 > left && nums[right-1] == nums[right]) right--;     // 避免重覆數組
+            left++;
+            right--;
         }
     }
-
     return res;
 }
 ```
