--- a/content/posts/leetcode/2131.md
+++ b/content/posts/leetcode/2131.md
@@ -61,7 +61,7 @@ Note that "ll" is another longest palindrome that can be created, and so is "xx"
 + 特別注意當 `s[0] == s[1]` 的時候，可以單獨擺在中間對稱也能成立，但要注意配對過的不能算。
 
 ### 三、解題
-#### 1. 
+#### 1. Hash Table
 + Time complexity: \\(O(n)\\)
 + Space complexity: \\(O(n)\\)
 ```C++
