--- a/content/posts/leetcode/901.md
+++ b/content/posts/leetcode/901.md
@@ -59,7 +59,7 @@ stockSpanner.next(85);  // return 6
 + 可以用 `Monotonic Stack` 裝載 `pair<int,int>` 記錄當前 `stock` 的股價與天數，假如遇到當前股價還低者，便 `pop` 掉，當前股價與 `Stack` 頂的位置差即為低於當前股價的連續天數。
 
 ### 三、解題
-#### 1. 
+#### 1. Monotonic Stack
 + Time complexity: \\(O(n)\\)
 + Space complexity: \\(O(n)\\)
 ```C++
