--- a/content/posts/leetcode/22.md
+++ b/content/posts/leetcode/22.md
@@ -25,22 +25,18 @@ ShowCodeCopyButtons: true
 + Ralated Topics: `String`、`Dynamic Programming`、`Backtracking`
 ---
 ### 一、題目
-
+Given `n` pairs of parentheses, write a function to *generate all combinations of well-formed parentheses*.
 
 **Example 1:**  
-+ **Input:** 
-+ **Output:** 
-+ **Explanation:** 
++ **Input:** n = 3
++ **Output:** ["((()))","(()())","(())()","()(())","()()()"]
 
 **Example 2:**
-+ **Input:** 
-+ **Output:** 
-
-**Example 3:**
-+ **Input:** 
-+ **Output:** 
++ **Input:** n = 1
++ **Output:** ["()"]
 
 **Constraints:**
++ `1 <= n <= 8`
 ---
 
 ### 二、分析
