--- a/content/posts/leetcode/947.md
+++ b/content/posts/leetcode/947.md
@@ -93,7 +93,7 @@ int removeStones(vector<vector<int>>& stones) {
     return stones.size() - cnt;
 }
 ```
-#### Union Find
+#### 2. Union Find
 + Time complexity: \\(O(n\log n)\\)
 + Space complexity: \\(O(n)\\)
 ```C++
