--- a/content/posts/leetcode/2466.md
+++ b/content/posts/leetcode/2466.md
@@ -23,6 +23,7 @@ ShowCodeCopyButtons: true
 **2466. Count Ways To Build Good Strings**
 + Hardness: \\(\color{orange}\textsf{Medium}\\)
 + Ralated Topics: `Dynamic Programming`
++ \\(\color{blue}\textsf{Biweekly Contest 91}\\)
 ---
 ### 一、題目
 Given the integers `zero`, `one`, `low`, and `high`, we can construct a string by starting with an empty string, and then at each step perform either of the following:
@@ -52,12 +53,27 @@ All binary strings from "000" to "111" are good strings in this example.
 
 ### 二、分析
 + 這一題與 [322. Coin Change](/posts/leetcode/322) 有異曲同工之妙。
++ 這一題動態規劃是[不定序列型框架](/posts/cs/algo/dp/#2-%E4%B8%8D%E5%AE%9A%E5%BA%8F%E5%88%97%E5%9E%8Blis)的題型：
+    + `dp[n]` 設為組成長度為 `n` 的 string 的可能性，最後再將符合題目需求的 `dp[low]` 到 `dp[high]` 加起來。
+    + `dp[n] = sum(dp[n-nums[i]])`。
+
 
 ### 三、解題
 #### 1. 
-+ Time complexity: \\(O()\\)
-+ Space complexity: \\(O()\\)
++ Time complexity: \\(O(n)\\)
++ Space complexity: \\(O(n)\\)
 ```C++
-
+int countGoodStrings(int low, int high, int zero, int one) {
+    vector<int> dp(high+1, 0);
+    int res = 0;
+    dp[0] = 1;
+    int start = min(zero, one);
+    for (int i = start; i <= high; i++) {
+        if (i-zero >= 0) dp[i] = (dp[i] + dp[i-zero]) % modulo;
+        if (i-one >= 0) dp[i] = (dp[i] + dp[i-one]) % modulo;
+        if (i >= low) res = (res + dp[i]) % modulo;
+    }
+    return res;
+}
 ```
 [回目錄 Catalog](/posts/leetcode)
