--- a/content/posts/leetcode/322.md
+++ b/content/posts/leetcode/322.md
@@ -49,7 +49,7 @@ You may assume that you have an infinite number of each kind of coin.
 ---
 
 ### 二、分析
-+ 這一題動態規劃是[不定序列型框架](https://intervalrain.github.io/posts/cs/algo/dp/#2-%E4%B8%8D%E5%AE%9A%E5%BA%8F%E5%88%97%E5%9E%8Blis)的題型：
++ 這一題動態規劃是[不定序列型框架](/posts/cs/algo/dp/#2-%E4%B8%8D%E5%AE%9A%E5%BA%8F%E5%88%97%E5%9E%8Blis)的題型：
 + 令 `dp[n]` 為組成 `n` 有幾種可能性。
 + `dp[n] = sum(dp[n-nums[i]])`
     + 以題目 coins = [1,2,5] 為例， `dp[11]` 可以為 `dp[11-1] + dp[11-2] + dp[11-5]`。
