--- a/content/posts/leetcode/279.md
+++ b/content/posts/leetcode/279.md
@@ -67,11 +67,11 @@ int numSquares(int n) {
     vector<int> sel;
     for (int i = 1; i <= n; i++) {
         int x = sqrt(i);
-        if (x*x == i) {
+        if (x*x == i) {     // 平方數時，增加選擇
             dp[i] = 1;
             sel.push_back(i);
         } else {
-            for (int s : sel) {
+            for (int s : sel) {  // 動態規劃轉移方程
                 dp[i] = min(dp[i-s]+1, dp[i]);
             }
         }
