update leetcode no.2485, 2486, 2487, 2488.md

--- a/content/posts/leetcode/2485.md
+++ b/content/posts/leetcode/2485.md
@@ -22,7 +22,7 @@ ShowCodeCopyButtons: true
 ---
 **2485. Find the Pivot Integer**
 + Hardness: \\(\color{green}\textsf{Easy}\\)
-+ Ralated Topics: `Array`
++ Ralated Topics: `Math`、`Prefix Sum`
 + \\(\color{blue}\textsf{Weekly Contest 321}\\)
 ---
 ### 一、題目
@@ -54,6 +54,7 @@ Return *the pivot integer* `x`. If no such integer exists, return `-1`. It is gu
 + 當 `x=1` 開始，即 `left = sum([1:1])` 與 `right = sum([1:n])`。
     + 當指標向右移動，`left += (x+1)`，而 `right -= x`。
     + 若指標從 `x=1` 到 `x=n` 遍歷過一次都無解，即傳回 `-1`，若有解則立即傳回 `x`。
++ 另外也可以也可以用 `Prefix Sum` 的概念，同樣從 `x=1` 到 `x=n`，找 `presum[n] - presum[i] == presum[i+1]`。
 
 ### 三、解題
 #### 1. Array
@@ -68,6 +69,23 @@ int pivotInteger(int n) {
         if (left == right) return i;
         left += (i+1);
         right -= i;
+    }
+    return -1;
+}
+```
+#### 2. Prefix Sum
++ Time Complexity
++ 
+```C++
+int pivotInteger(int n) {
+    if (n == 1) return 1;
+    vector<int> presum;
+    presum.push_back(0);
+    for (int i = 1; i <= n; i++) {
+        presum.push_back(presum.back() + i);
+    }
+    for (int i = 1; i < n; i++) {
+        if (presum[n] - presum[i] == presum[i+1]) return i+1;
     }
     return -1;
 }
