--- a/content/posts/leetcode/2486.md
+++ b/content/posts/leetcode/2486.md
@@ -22,7 +22,7 @@ ShowCodeCopyButtons: true
 ---
 **2486. Accept Characters to String to Make Subsequence**
 + Hardness: \\(\color{orange}\textsf{Medium}\\)
-+ Ralated Topics: `String`、`Two Pointer`
++ Ralated Topics: `Two Pointer`、`String`、`Greedy`
 + \\(\color{blue}\textsf{Weekly Contest 321}\\)
 ---
 ### 一、題目
