--- a/content/posts/leetcode/2487.md
+++ b/content/posts/leetcode/2487.md
@@ -22,7 +22,7 @@ ShowCodeCopyButtons: true
 ---
 **2487. Remove Nodes From Linked List**
 + Hardness: \\(\color{orange}\textsf{Medium}\\)
-+ Ralated Topics: `Linked List`、`Monotonic Stack`
++ Ralated Topics: `Linked List`、`Stack`、`Recursion`、`Monotonic Stack`
 + \\(\color{blue}\textsf{Weekly Contest 321}\\)
 ---
 ### 一、題目
