--- a/content/posts/leetcode/2488.md
+++ b/content/posts/leetcode/2488.md
@@ -22,7 +22,7 @@ ShowCodeCopyButtons: true
 ---
 **2488. Count Subarrays With Median K**
 + Hardness: \\(\color{red}\textsf{Hard}\\)
-+ Ralated Topics: `HashMap`、`Array`
++ Ralated Topics: `Array`、`Hash Table`、`Prefix Sum`
 + \\(\color{blue}\textsf{Weekly Contest 321}\\)
 ---
 ### 一、題目
