--- a/content/posts/leetcode/1026.md
+++ b/content/posts/leetcode/1026.md
@@ -54,7 +54,7 @@ Among all possible differences, the maximum value of 7 is obtained by |8 - 1| = 
 + 借用一個 `helper` 函式，將父節點的值往子葉節點傳，並且記錄過程中的最大值與最小值，並定義一個全域變數記錄其差值。
 
 ### 三、解題
-#### 1. 
+#### 1. DFS
 + Time complexity: \\(O(n)\\)
 + Space complexity: \\(O(1)\\)
 ```C++
