--- a/content/posts/leetcode/1323.md
+++ b/content/posts/leetcode/1323.md
@@ -57,7 +57,7 @@ The maximum number is 9969.
 + 觀察規律，從數字從左開始，將第一個 `6` 換成 `9`者為解。
 
 ### 三、解題
-#### 1. 
+#### 1. Greedy
 + Time complexity: \\(O(n)\\)
 + Space complexity: \\(O(1)\\)
 ```C++
