--- a/content/posts/leetcode/1339.md
+++ b/content/posts/leetcode/1339.md
@@ -56,7 +56,7 @@ Return *the maximum product of the sums of the two subtrees*. Since the answer m
 + 需要注意此題為大數問題，要注意返回的值要先比較之後才取餘數。
 
 ### 三、解題
-#### 1. 
+#### 1. DFS
 + Time complexity: \\(O(n)\\)
 + Space complexity: \\(O(n)\\)
 ```C++
