--- a/content/posts/leetcode/1544.md
+++ b/content/posts/leetcode/1544.md
@@ -58,7 +58,7 @@ Return the string after making it good. The answer is guaranteed to be unique un
 + 當前後兩個字元互為大小寫的字元時，將之移除。可利用 `stack` 來操作之。
 
 ### 三、解題
-#### 1. 
+#### 1. Stack
 + Time complexity: \\(O(n)\\)
 + Space complexity: \\(O(1)\\)
 ```C++
