--- a/content/posts/leetcode/21.md
+++ b/content/posts/leetcode/21.md
@@ -76,7 +76,7 @@ ListNode* mergeTwoLists(ListNode* list1, ListNode* list2) {
     return dummy->next;                     // 最後記得回傳虛假鏈表的下一個節點
 }
 ```
-2. Recursion
+#### 2. Recursion
 + Time complexity: \\(O(m+n)\\)
 + Space complexity: \\(O(1)\\)
 ```C++
