--- a/content/posts/leetcode/2469.md
+++ b/content/posts/leetcode/2469.md
@@ -52,7 +52,7 @@ Return *the array `ans`*. Answers within `10^-5` of the actual answer will be ac
 + 略。
 
 ### 三、解題
-#### 1. 
+#### 1. Math
 + Time complexity: \\(O(1)\\)
 + Space complexity: \\(O(1)\\)
 ```C++
