--- a/content/posts/leetcode/328.md
+++ b/content/posts/leetcode/328.md
@@ -50,7 +50,7 @@ You must solve the problem in `O(1)` extra space complexity and `O(n)` time comp
 + 注意因為我們要拿**奇數的尾**接**偶數的頭**，故要注意 iterate 的終止條件是 `!even || !even->next`
 
 ### 三、解題
-#### 1. 
+#### 1. Linked List
 + Time complexity: \\(O(n)\\)
 + Space complexity: \\(O(1)\\)
 ```C++
