--- a/content/posts/leetcode/587.md
+++ b/content/posts/leetcode/587.md
@@ -52,7 +52,7 @@ Return *the coordinates of trees that are exactly located on the fence perimeter
 + 由左到右找斜率大的，可得到上半部的外圍線；由右到左可得到下半部的外圍線。
 
 ### 三、解題
-#### 1. 
+#### 1. Math
 + Time complexity: \\(O(n)\\)
 + Space complexity: \\(O(n)\\)
 ```C++
