--- a/content/posts/leetcode/24.md
+++ b/content/posts/leetcode/24.md
@@ -50,7 +50,7 @@ Given a linked list, swap every two adjacent nodes and return its head. You must
 + 經典的 `ListNode` 問題，[鏈表的後序遍歷](/posts/cs/algo/linked_list/#3-鏈表的後序遍歷)，利用後序遍歷回傳值的特性並用 `recursion` 來完成這一題。
 
 ### 三、解題
-#### 1. 
+#### 1. Recursion
 + Time complexity: \\(O(n)\\)
 + Space complexity: \\(O(1)\\)
 ```C++
