--- a/content/posts/leetcode/2471.md
+++ b/content/posts/leetcode/2471.md
@@ -72,7 +72,7 @@ It can be proven that 3 is the minimum number of operations needed.
 + 注意到 `minSwaps` 的實現：想法是，`n` 個節點 `swap` 形成一個 `cycle`，代表進行了 `n-1` 次 `swap`，故我們可以觀察得：`minSwaps` 的次數會等於 `n - cycles`。
 
 ### 三、解題
-#### 1. 
+#### 1. DFS
 + Time complexity: \\(O(n\log n)\\)
 + Space complexity: \\(O(n)\\)
 ```C++
