--- a/content/posts/leetcode/2461.md
+++ b/content/posts/leetcode/2461.md
@@ -22,7 +22,7 @@ ShowCodeCopyButtons: true
 ---
 **2461. Maximum Sum of Distinct Subarrays With Length K**
 + Hardness: \\(\color{orange}\textsf{Medium}\\)
-+ Ralated Topics: `Array`、`Hash Table`、`Sliding Window`、
++ Ralated Topics: `Array`、`Hash Table`、`Sliding Window`
 + \\(\color{blue}\textsf{Weekly Contest 318}\\)
 ---
 ### 一、題目
