--- a/content/posts/leetcode/2500.md
+++ b/content/posts/leetcode/2500.md
@@ -22,7 +22,7 @@ ShowCodeCopyButtons: true
 ---
 **2500. Delete Greatest Value in Each Row**
 + Hardness: \\(\color{green}\textsf{Easy}\\)
-+ Ralated Topics: 
++ Ralated Topics: `Array`、`Hash Table`、`Binary Search`、`Dynamic Programming`、`Sorting`
 + \\(\color{blue}\textsf{Weekly Contest 323}\\)
 ---
 ### 一、題目
