--- a/content/posts/leetcode/2501.md
+++ b/content/posts/leetcode/2501.md
@@ -22,7 +22,7 @@ ShowCodeCopyButtons: true
 ---
 **2501. Longest Square Streak in an Array**
 + Hardness: \\(\color{orange}\textsf{Medium}\\)
-+ Ralated Topics: 
++ Ralated Topics: `Array`、`Hash Table`、`Binary Search`、`Dynamic Programming`、`Sorting`
 + \\(\color{blue}\textsf{Weekly Contest 323}\\)
 ---
 ### 一、題目
