--- a/content/posts/leetcode/347.md
+++ b/content/posts/leetcode/347.md
@@ -22,7 +22,7 @@ ShowCodeCopyButtons: true
 ---
 **347. Top K Frequent Elements**
 + Hardness: \\(\color{orange}\textsf{Medium}\\)
-+ Ralated Topics: `Array`、`Hash Table`、`Divide and Conquer`、`Sorting`、`Heap (Priority Queue)`、`Bucket Sort`、`Couting`、`Quickselect`
++ Ralated Topics: `Array`、`Hash Table`、`Divide and Conquer`、`Sorting`、`Heap (Priority Queue)`、`Bucket Sort`、`Counting`、`Quickselect`
 ---
 ### 一、題目
 Given an integer array `nums` and an integer `k`, return the `k` *most frequent elements*. You may return the answer in **any order**.  
