--- a/content/posts/leetcode/1834.md
+++ b/content/posts/leetcode/1834.md
@@ -76,7 +76,7 @@ Return *the order in which the CPU will process the tasks*.
 + 需注意，`timestamp` 可能是大數。
 
 ### 三、解題
-#### 1. 
+#### 1. Heap (Priority Queue)
 + Time complexity: \\(O(n\log n)\\)
 + Space complexity: \\(O(n)\\)
 ```C++
