--- a/content/posts/leetcode/2521.md
+++ b/content/posts/leetcode/2521.md
@@ -23,6 +23,7 @@ ShowCodeCopyButtons: true
 **2521. Distinct Prime Factors of Product of Array**
 + Hardness: \\(\color{orange}\textsf{Medium}\\)
 + Ralated Topics: 
++ \\(\color{blue}\textsf{Weekly Contest 323}\\)
 ---
 ### 一、題目
 Given an array of positive integers `nums`, return *the number of ***distinct prime factors*** in the product of the elements of* `nums`.  
@@ -72,7 +73,7 @@ There is 1 distinct prime factor so we return 1.
     11&2&13&2&3&2&17&2&19&2\\\\\hline
     3&2&23&2&5&2&3&2&29&2\\\\\hline
     31&2&3&2&5&2&37&2&3&2\\\\\hline
-    41&3&43&2&3&2&47&2&7&2\\\\\hline
+    41&2&43&2&3&2&47&2&7&2\\\\\hline
     \end{array}\\)
 + 有了上面這張改良後的表，因式分解就可以簡化成：
     + 當 `table[num] == num` 時，`num` 是質數
