--- a/content/posts/leetcode/2521.md
+++ b/content/posts/leetcode/2521.md
@@ -81,8 +81,8 @@ There is 1 distinct prime factor so we return 1.
 
 ### 三、解題
 #### 1. Sieve of Eratosthenes
-+ Time complexity: \\(O()\\)
-+ Space complexity: \\(O()\\)
++ Time complexity: \\(O(n\sqrt{n}/\log n)\\)
++ Space complexity: \\(O(n/\log n)\\)
 ```C++
 vector<int> table;      // 在全域建一個 pre-built table
 int distinctPrimeFactors(vector<int>& nums) {
