--- a/content/posts/leetcode/149.md
+++ b/content/posts/leetcode/149.md
@@ -55,7 +55,7 @@ Given an array of `points` where `points[i] = [xi, yi]` represents a point on th
 #### 1. 
 + Time complexity: \\(O(n^2)\\)
 + Space complexity: \\(O(n)\\)
-```C++
+```C++ Hash Table
 int maxPoints(vector<vector<int>>& points) {
     int n = points.size();
     int res = 0;
