--- a/content/posts/leetcode/520.md
+++ b/content/posts/leetcode/520.md
@@ -50,7 +50,7 @@ Given a string `word`, return `true` if the usage of capitals in it is right.
 + 根據題意，要馬全是大寫，要馬全是小寫，不然就是只有首字大寫。
 
 ### 三、解題
-#### 1. 
+#### 1. String
 + Time complexity: \\(O(n)\\)
 + Space complexity: \\(O(1)\\)
 ```C++
