--- a/content/posts/leetcode/100.md
+++ b/content/posts/leetcode/100.md
@@ -51,13 +51,20 @@ Two binary tree are considered the same if they are structurally iedntical, and 
 ---
 
 ### 二、分析
-+ 典型樹的遍歷問題，
++ 典型樹的遍歷問題，兩棵樹一起遍歷，注意要處理當 `node == null` 的情形便可。
++ 兩棵樹相同的條件為：`root` 的值相同，且左右兩個 `leaf` 也相同。
 
 ### 三、解題
-#### 1. 
-+ Time complexity: \\(O()\\)
-+ Space complexity: \\(O()\\)
+#### 1. Recursion
++ Time complexity: \\(O(n)\\)
++ Space complexity: \\(O(1)\\)
 ```C++
+bool isSameTree(TreeNode* p, TreeNode* q) {
+    if (p == NULL && q == NULL) return true;
+    if (p == NULL || q == NULL) return false;
+    if (p->val != q->val) return false;
+    return isSameTree(p->left, q->left) && isSameTree(p->right, q->right);
+}
 
 ```
 [回目錄 Catalog](/posts/leetcode)
