update posts/leetcode list

--- a/content/posts/leetcode/100.md
+++ b/content/posts/leetcode/100.md
@@ -23,7 +23,7 @@ mermaid: true
 ---
 **100. Same Tree**
 + Hardness: \\(\color{green}\textsf{Easy}\\)
-+ Ralated Topics: `Tree`、`Depth-First Search`、`Breadth-First`、`Binary Tree`
++ Ralated Topics: `Tree`、`Depth-First Search`、`Breadth-First Search`、`Binary Tree`
 ---
 ### 一、題目
 Given the roots of two binary tree `p` and `q`, write a function to check if they are the same or not.  
