update/posts/jp/n5

--- a/content/posts/jp/n5.md
+++ b/content/posts/jp/n5.md
@@ -24,7 +24,7 @@ ShowPostNavLinks: true
 ShowCodeCopyButtons: true
 ---
 
-{{< ppt src="https://view.officeapps.live.com/op/embed.aspx?src=https%3A%2F%2Fraw%2Egithubusercontent%2Ecom%3A443%2Fintervalrain%2Fintervalrain%2Egithub%2Eio%2Fmain%2Fcontent%2Fposts%2Fjp%2Fppt%2Fn5%2Epptx&amp;wdAr=1.7777777777777777" >}}
+{{< ppt src="https://view.officeapps.live.com/op/embed.aspx?src=https%3A%2F%2Fraw%2Egithubusercontent%2Ecom%3A443%2Fintervalrain%2Fintervalrain%2Egithub%2Eio%2Fmain%2Fcontent%2Fposts%2Fjp%2Fn5%2Epptx&amp;wdAr=1.7777777777777777" >}}
 
 
 ### 1.名詞〜です、〜じゃありません
