--- a/content/posts/jp/n5.md
+++ b/content/posts/jp/n5.md
@@ -26,29 +26,4 @@ ShowCodeCopyButtons: true
 
 {{< ppt src="https://view.officeapps.live.com/op/embed.aspx?src=https%3A%2F%2Fraw%2Egithubusercontent%2Ecom%3A443%2Fintervalrain%2Fintervalrain%2Egithub%2Eio%2Fmain%2Fcontent%2Fposts%2Fjp%2Fn5%2Epptx&amp;wdAr=1.7777777777777777" >}}
 
-
-### 1.名詞〜です、〜じゃありません
-+ 表名詞肯定、否定
-    + 名詞＋です（表示肯定）
-    + 名詞＋じゃありません（表示否定）
-+ 例文
-    + 私は学生です[だ]。
-    + 私は会社員じゃありません[じゃあない]。
-### 2.〜ます、ません
-+ 表動詞肯定、否定
-    + 動詞＋ます（表示肯定）
-    + 動詞＋ません（表示否定）
-+ 例文
-    + 明日、私は働きます。
-    + あなたはお酒を飲みますか。
-    + 高橋部長はタバコを吸いません。
-    + 夜8時から9時まで勉強します。
-### 3.形容詞〜です、じゃありません
-+ 表形容詞肯定、否定
-    + な形容詞＋です（表示肯定）
-    + な形容詞＋じゃありません（表示否定）
-+ 例文
-    + この街は静かです。
-    + 私の大学は有名じゃありません。
-    + 彼女はとても元気です。
-    + この川はあまり綺麗じゃありません。
+Reference: [出口日語](https://www.youtube.com/@deguchi)
