--- a/content/AI/1_3.md
+++ b/content/AI/1_3.md
@@ -4,7 +4,7 @@ date: 2024-12-03T15:42:52+08:00
 tags: ["AI"]
 draft: false
 Categories: AI
-description: "What is artificial intelligence?"
+description: "The development of deep learning"
 author: "Rain Hu"
 showToc: true
 TocOpen: true
