--- a/content/AI/2_2.md
+++ b/content/AI/2_2.md
@@ -4,7 +4,7 @@ date: 2024-12-15T14:26:38+08:00
 tags: ["AI"]
 draft: false
 Categories: AI
-description: "First trial for neural network using mnist"
+description: "The concept of tensor"
 author: "Rain Hu"
 showToc: true
 TocOpen: true
