--- a/content/AI/2_1.md
+++ b/content/AI/2_1.md
@@ -59,7 +59,7 @@ array([7, 2, 1, ..., 4, 5, 6], dtype=uint8)
 from tensorflow import keras
 from tensorflow.keras import layers
 
-model = keras.Sequentials([
+model = keras.Sequential([
     layers.Dense(512, activation="relu")
     layers.Dense(10, activation="softmax")
 ])
