rename ai posts

--- a/content/AI/2_1.md
+++ b/content/AI/2_1.md
@@ -1,5 +1,5 @@
 ---
-title: "[AI] 初試神經網路-手寫辨識 mnist"
+title: "[AI] 2-1. 初試神經網路-手寫辨識 mnist"
 date: 2024-12-15T13:05:53+08:00
 tags: ["AI"]
 draft: false
