--- a/content/AI/3_3.md
+++ b/content/AI/3_3.md
@@ -1,5 +1,5 @@
 ---
-title: "[AI] 使用 TensorFlow 與 Keras 函式庫"
+title: "[AI] 3-3. 使用 TensorFlow 與 Keras 函式庫"
 date: 2024-12-18T16:56:55+08:00
 tags: ["AI"]
 draft: false
