--- a/content/AI/3_4.md
+++ b/content/AI/3_4.md
@@ -1,5 +1,5 @@
 ---
-title: "[AI] 實作線性分類器"
+title: "[AI] 3-4. 實作線性分類器"
 date: 2024-12-19T16:55:12+08:00
 tags: ["AI"]
 draft: false
@@ -422,3 +422,4 @@ Model Comparison:
                   Complex Model       0.986667
 Extended Features Complex Model       0.981667
 ```
++ 其中紅色的線是我們得出的決策邊界，如果在高維空間，則會是一個「超平面」。
