--- a/content/AI/3_6.md
+++ b/content/AI/3_6.md
@@ -1,5 +1,5 @@
 ---
-title: "[AI] 3-5. Keras API"
+title: "[AI] 3-6. Keras API"
 date: 2024-12-20T15:49:27+08:00
 tags: ["AI"]
 draft: false
@@ -21,3 +21,52 @@ ShowBreadCrumbs: true
 ShowPostNavLinks: true
 ShowCodeCopyButtons: true
 ---
+
+## 1. Layer
++ Layer 是神經網路的基本資料處理模組(data-processing module)，可以接受一個或多個張量輸入，再輸出一個或多個張量。Layer 的權重可視為該層的**狀態**(state)，在經過隨機梯度下降法(SGD)不斷更新權重(學習)，最終得到損失值最低的權重值。
+### 分類
++ 不同格式的資料需要不同的層來處理。
+  + **密集連接層(densely connected layer):** 又稱全連接層(fully connected layer)或密集層(dense layer)。如果資料輸入是簡單的 1D 向量資料，則多半是儲存在 2D 張量中，其 shape 為 (樣本 samples, 特徵 features)，通常是用
+  + **循環層(recurrent layer)**: 如果輸入的資料是 2D 序列(sequence) 資料，多半是儲存在 3D 張量中，其 shape 為 (樣本 samples, 時戳 timestamps, 特徵 features)，如 LSTM 層。
+  + **2D 卷積層**: 如果是 3D 影像資料，多半是儲存在 4D 張量中，通常使用 2D 卷積層(Conv2D Layer)
+
+### Keras 中的基礎 Layer 類別
++ Layer 類別是 Keras 的核心，每個 Keras 元件都是一個 Layer 物件並與 Layer 有密切互動。Layer 是將一些狀態(權重)和運算(正向傳播)包在一起的物件。
++ 雖然權重可以在建構子 `__init__()` 中建立，但我們通常會使用 `build()` 來建立，然後用 `call()` 來執行正向傳播。
+```python
+from tensorflow import tf
+
+class SimpleDemo(keras.layers.Layer):
+    def __init__(self, units, activation=None):
+        super().__init__()
+        self.units = units
+        self.activation = activation
+    
+	def build(self, input_shape):
+		input_dim = input_shape[-1]
+		self.W = self.add_weight(shape=(input_dim, self.units),initializer="random_normal")
+		self.b = self.add_weight(shape=(self.units,),initializer="zeros")
+	
+	def call(self, inputs): 
+		y = tf.matmul(inputs, self.W) + self.b
+		if self.activation is not None:
+			y = self.activation(y)
+		return y
+```
++ 我們可以像使用函式一樣來實例化 Layer 物件，其輸入為一個張量
+```python
+sample_layer = SimpleDemo(units=32, activation=tf.nn.relu)
+```
++ 建立 `build()` 方法的意義在於，我們希望在第一次呼叫 layer 物件時才即時創建權重張量。
++ keras 會幫我們做好自動推論權重的 shape，我們可以把關注給放在如何定義 `build()`。
+```python
+model = keras.Sequential([
+	SimpleDense(32, activation="relu"),
+	SimpleDense(64, activation="relu"),
+	SimpleDense(32, activation="relu"),
+	SimpleDense(10, activation="softmax")
+])
+```
++ 事實上 `__call__()` 做的是遠不只推論 shape，還有 **eager 執行模式** 和 **graph 執行模式** 之的路徑選擇等等。
+
+## 2. Model
