--- a/content/AI/3_4.md
+++ b/content/AI/3_4.md
@@ -44,8 +44,44 @@ ShowCodeCopyButtons: true
         + KNN
 
 ## 線性迴歸
-### 線性代數解法
 ![sample](./3_4/sample.png)
+### 暴力解
++ 假設我們大概知道答案的區間，我們可以暴力求解，將每一個 w, b 代入求最小的 (w, b) 組合
++ 這個方法的缺點是，計算量很大，且我們求值的方式不是連續的，精準度不夠。
+```python
+import sys
+
+areas = data[:,0]
+prices = data[:,1]
+
+def compute_loss(y_pred, y):
+  return (y_pred - y)**2
+
+best_w = 0.
+best_b = 0.
+min_loss = sys.float_info.max
+
+# 猜 w=30-50, step = 0.1
+# 猜 b=200-600 step = 1
+
+for i in range(200):
+    for j in range(400):
+        w = 30 + i*0.1
+        b = 200 + j*1
+        loss = 0.
+        for area, price in zip(areas, prices):
+            y_pred = w * area + b
+            loss += compute_loss(y_pred, price)
+        if loss < min_loss:
+            min_loss = loss
+            best_w = w
+            best_b = b
+```
++ `w=35.1`
++ `b=599`
+![brute_force](./3_4/brute_force.png)
+
+### 線性代數解法
 + 假如我們學過線性代數，我們想得到它的歸性迴歸方程式，我們的作法會是：
     + 設迴歸方程式為 
         $$\text{y}=\text{wx}+\text{b}\quad\quad (1)$$
@@ -277,3 +313,341 @@ print(f"Final normalized loss: {final_loss:.6f}")
 
 ```
 ![sample_with_gradient_descent](/3_4/sample_with_gradient_descent.png)
+
+### 批次訓練(Batch)的概念
++ 我們可以在不同的時機點來更新 w 與 b，假設我們的訓練次數為 3000，那 epochs 為3000。且樣本數為 1000。
+    + 批次訓練(batch training)，代表的是我們總共做 3000 次的更新，每次都是利用全部 1000 筆樣本算出來的 dw 與 db 去做調整。
+    + SGD(Stochastic gradient descent)，代表我們做 3000 * 1000 次的更新，每一個樣本計算出 dw 與 db 就立即去調整。
+    + 小批次訓練(mini-batch training)則是介於批次訓練與 SGD 之間，假設我們每 200 個樣本做一次更新，實際上會做 3000 * 5 次更新。
+
+```python
+import numpy as np
+import matplotlib.pyplot as plt
+
+class LinearRegression:
+    def __init__(self, learning_rate=0.0000001):
+        self.w = 0.0
+        self.b = 0.0
+        self.lr = learning_rate
+        self.loss_history = []
+        
+    def predict(self, X):
+        return self.w * X + self.b
+    
+    def compute_loss(self, X, y):
+        y_pred = self.predict(X)
+        return np.mean((y_pred - y) ** 2)
+    
+    def compute_gradients(self, X, y):
+        y_pred = self.predict(X)
+        error = y_pred - y
+        dw = np.mean(2 * error * X)
+        db = np.mean(2 * error)
+        return dw, db
+    
+    def train_batch(self, X, y, epochs=3000):
+        """Full batch gradient descent"""
+        for epoch in range(epochs):
+            # Compute gradients using all data
+            dw, db = self.compute_gradients(X, y)
+            
+            # Update parameters
+            self.w -= self.lr * dw
+            self.b -= self.lr * db
+            
+            # Record loss
+            if epoch % 100 == 0:
+                loss = self.compute_loss(X, y)
+                self.loss_history.append(loss)
+                print(f"Epoch {epoch}, Loss: {loss:.2f}")
+                
+    def train_mini_batch(self, X, y, batch_size=2, epochs=3000):
+        """Mini-batch gradient descent"""
+        n_samples = len(X)
+        
+        for epoch in range(epochs):
+            # Shuffle the data
+            indices = np.random.permutation(n_samples)
+            X_shuffled = X[indices]
+            y_shuffled = y[indices]
+            
+            # Mini-batch training
+            for i in range(0, n_samples, batch_size):
+                X_batch = X_shuffled[i:i+batch_size]
+                y_batch = y_shuffled[i:i+batch_size]
+                
+                # Compute gradients using batch data
+                dw, db = self.compute_gradients(X_batch, y_batch)
+                
+                # Update parameters
+                self.w -= self.lr * dw
+                self.b -= self.lr * db
+            
+            # Record loss for the whole dataset
+            if epoch % 100 == 0:
+                loss = self.compute_loss(X, y)
+                self.loss_history.append(loss)
+                print(f"Epoch {epoch}, Loss: {loss:.2f}")
+                
+    def train_sgd(self, X, y, epochs=3000):
+        """Stochastic gradient descent"""
+        n_samples = len(X)
+        
+        for epoch in range(epochs):
+            # Shuffle the data
+            indices = np.random.permutation(n_samples)
+            X_shuffled = X[indices]
+            y_shuffled = y[indices]
+            
+            # SGD training (batch_size = 1)
+            for i in range(n_samples):
+                X_sample = X_shuffled[i:i+1]
+                y_sample = y_shuffled[i:i+1]
+                
+                # Compute gradients using single sample
+                dw, db = self.compute_gradients(X_sample, y_sample)
+                
+                # Update parameters
+                self.w -= self.lr * dw
+                self.b -= self.lr * db
+            
+            # Record loss for the whole dataset
+            if epoch % 100 == 0:
+                loss = self.compute_loss(X, y)
+                self.loss_history.append(loss)
+                print(f"Epoch {epoch}, Loss: {loss:.2f}")
+
+(areas, prices) = load_data()
+models = {
+    'Batch': LinearRegression(learning_rate=1e-7),
+    'Mini-batch': LinearRegression(learning_rate=1e-7),
+    'SGD': LinearRegression(learning_rate=5e-8)
+}
+
+models['Batch'].train_batch(areas, prices)
+models['Mini-batch'].train_mini_batch(areas, prices)
+models['SGD'].train_sgd(areas, prices)
+
+plt.figure(figsize=(10, 6))
+for name, model in models.items():
+    plt.plot(range(0, 3000, 100), model.loss_history, label=name)
+plt.xlabel('Epoch')
+plt.ylabel('Loss')
+plt.title('Loss Comparison')
+plt.legend()
+plt.grid(True)
+plt.show()
+
+for name, model in models.items():
+    print(f"\n{name} Results:")
+    print(f"w = {model.w:.6f}")
+    print(f"b = {model.b:.6f}")
+    print(f"Final Loss = {model.loss_histroy[-1]:.2f}")
+```
++ 從更新次數來看，SGD 的更新次數 > 小批次訓練 > 批次訓練，SGD 所耗的時間同樣也比小批次訓練與批次訓練長，但實際上 loss 收斂的情形也比較好嗎？
++ 從下圖比較可見，收斂情況最佳的反而是小批次訓練，我們比較三種方法，總結一下成果：
+![batch](./3_4/batch.png)
++ 批次訓練 Batch Gradient Descent (BGD)
+    + 每次更新使用所有數據
+    + 穩定但計算量大
+    + 容易找到局部最優解
+
++ 小批次訓練 Mini-batch Gradient Descent
+    + 每次使用一小批數據
+    + 平衡了計算效率和更新穩定性
+    + 常用於實際應用
+
++ Stochastic Gradient Descent (SGD)
+    + 每次只使用一個樣本
+    + 更新頻繁，收斂較快但不穩定
+    + 需要較小的學習率
+
+### L1/L2 正則化(L1/L2 Regularization)
++ 在考慮有多個特徵、且帶有 outlier 或雜訊時
++ L1 正則化 (Lasso Regression)
+    + Lasso (Least Absolute Shrinkage and Selection Operator)  
+    + 定義：在損失函數中加入參數的絕對值項
+    $$
+    \text{Loss} = \text{MSE} + \lambda \times \sum|w|
+    $$
+    + 特點：
+        - 傾向於產生稀疏解（某些參數會變成0）
+        - 適合用於特徵選擇
+        - 對異常值較不敏感
+
++ L2 正則化 (Ridge Regression)
+    + 定義：在損失函數中加入參數的平方項
+    $$
+    \text{Loss} = \text{MSE} + \lambda \times \sum(w^2)
+    $$
+    + 特點：
+        - 傾向於使所有參數值變小但不為0
+        - 計算導數較簡單
+        - 對共線性（多重共線性）問題有好處
+
+```python
+import numpy as np
+import matplotlib.pyplot as plt
+from sklearn.preprocessing import StandardScaler
+from sklearn.model_selection import train_test_split
+
+# 生成合成數據
+np.random.seed(42)
+
+def generate_synthetic_data(n_samples=100):
+    # 生成基本特徵
+    X1 = np.random.normal(0, 1, n_samples)  # 面積
+    X2 = np.random.normal(0, 1, n_samples)  # 房齡
+    
+    # 生成共線性特徵（與面積高度相關的特徵，如房間數）
+    X3 = 0.8 * X1 + 0.2 * np.random.normal(0, 1, n_samples)
+    
+    # 生成噪音特徵（完全無關的特徵）
+    X4 = np.random.normal(0, 1, n_samples)
+    
+    # 組合特徵
+    X = np.column_stack([X1, X2, X3, X4])
+    
+    # 生成目標值（房價）
+    # 主要由X1和X2決定，X3有少許影響，X4完全不影響
+    y = 3 * X1 + 2 * X2 + 0.5 * X3 + np.random.normal(0, 0.1, n_samples)
+    
+    return X, y
+
+class RegularizedRegression:
+    def __init__(self, reg_type=None, lambda_reg=0.1, learning_rate=0.01):
+        self.reg_type = reg_type
+        self.lambda_reg = lambda_reg
+        self.lr = learning_rate
+        self.w = None
+        self.loss_history = []
+        
+    def fit(self, X, y, epochs=1000):
+        n_features = X.shape[1]
+        self.w = np.zeros(n_features)
+        
+        for epoch in range(epochs):
+            # 預測
+            y_pred = np.dot(X, self.w)
+            
+            # 計算梯度
+            gradient = 2/len(y) * np.dot(X.T, (y_pred - y))
+            
+            # 加入正則化項的梯度
+            if self.reg_type == 'l1':
+                gradient += self.lambda_reg * np.sign(self.w)
+            elif self.reg_type == 'l2':
+                gradient += 2 * self.lambda_reg * self.w
+                
+            # 更新權重
+            self.w -= self.lr * gradient
+            
+            # 記錄損失
+            if epoch % 100 == 0:
+                loss = np.mean((y_pred - y) ** 2)
+                if self.reg_type == 'l1':
+                    loss += self.lambda_reg * np.sum(np.abs(self.w))
+                elif self.reg_type == 'l2':
+                    loss += self.lambda_reg * np.sum(self.w ** 2)
+                self.loss_history.append(loss)
+    
+    def predict(self, X):
+        return np.dot(X, self.w)
+
+# 生成數據
+X, y = generate_synthetic_data(n_samples=100)
+
+# 分割訓練集和測試集
+X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)
+
+# 標準化特徵
+scaler = StandardScaler()
+X_train_scaled = scaler.fit_transform(X_train)
+X_test_scaled = scaler.transform(X_test)
+
+# 訓練不同的模型
+models = {
+    'No Regularization': RegularizedRegression(reg_type=None, lambda_reg=0),
+    'L1 (Lasso)': RegularizedRegression(reg_type='l1', lambda_reg=0.1),
+    'L2 (Ridge)': RegularizedRegression(reg_type='l2', lambda_reg=0.1)
+}
+
+# 訓練模型
+for name, model in models.items():
+    print(f"\nTraining {name}...")
+    model.fit(X_train_scaled, y_train)
+
+# 比較特徵權重
+feature_names = ['Area', 'Age', 'Rooms', 'Noise']
+plt.figure(figsize=(12, 6))
+x = np.arange(len(feature_names))
+width = 0.25
+
+for i, (name, model) in enumerate(models.items()):
+    plt.bar(x + i*width, model.w, width, label=name)
+
+plt.xlabel('Features')
+plt.ylabel('Weight')
+plt.title('Feature Weights Comparison')
+plt.xticks(x + width, feature_names)
+plt.legend()
+plt.grid(True)
+plt.show()
+
+# 比較測試集上的表現
+plt.figure(figsize=(12, 6))
+for name, model in models.items():
+    y_pred = model.predict(X_test_scaled)
+    mse = np.mean((y_test - y_pred) ** 2)
+    print(f"\n{name} Test MSE: {mse:.4f}")
+    plt.scatter(y_test, y_pred, label=f'{name} (MSE: {mse:.4f})')
+
+plt.plot([y_test.min(), y_test.max()], [y_test.min(), y_test.max()], 'k--', lw=2)
+plt.xlabel('True Values')
+plt.ylabel('Predictions')
+plt.title('Prediction vs True Values')
+plt.legend()
+plt.grid(True)
+plt.show()
+
+# 印出每個特徵的權重
+print("\nFeature Weights:")
+for name, model in models.items():
+    print(f"\n{name}:")
+    for fname, w in zip(feature_names, model.w):
+        print(f"{fname}: {w:.4f}")
+```
+
+![regularization](./3_4/relugarization.png)
++ 觀察重點：
+    + L1 正則化（Lasso）：
+        + 傾向於將不重要的特徵（如 Noise）權重設為 0
+        + 在有共線性的特徵中選擇一個（Area vs Rooms）
+    + L2 正則化（Ridge）：
+        + 所有權重都被縮小
+        + 共線性特徵的權重會被平均分配
+    + 無正則化：
+        + 可能過度擬合噪音
+        + 在共線性特徵上表現不穩定
++ 從結果可以看出：
+    + L1 正則化確實將無關特徵（Noise）的權重降到接近 0
+    + L2 正則化讓所有權重都變得更小，但保持了相對重要性
+    + 無正則化的模型權重更大，更容易受噪音影響
+
++ 主要的差異和實作細節：
+    1. **正則化項的加入**
+    - L1：在損失函數中加入 `λ * |w|`
+    - L2：在損失函數中加入 `λ * w²`
+
+    2. **梯度計算**
+    - L1 的梯度：`sign(w) * λ`
+    - L2 的梯度：`2 * λ * w`
+
+    3. **超參數 λ (lambda_reg)**
+    - 控制正則化的強度
+    - 較大的 λ 會產生較小的權重
+    - 需要通過交叉驗證來選擇適當的值
+
+    4. **使用場景**
+    - L1：特徵選擇，當你認為只有部分特徵是重要的
+    - L2：處理共線性，當特徵之間有相關性
